app-deploy-svc.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app-deploy
spec:
  replicas: 1
  selector:
    matchLabels:
      app: app-deploy
  template:
    metadata:
      labels:
        app: app-deploy
    spec:
      serviceAccountName: workload-identity-sa
      containers:
      - name: app-deploy
        image: acrdemo03022025.azurecr.io/applications/flask_app:v0.9-amd64
        ports:
        - containerPort: 6000
        volumeMounts:
        - name: secrets-store-inline
          mountPath: "/mnt/secrets-store"
          readOnly: true
        - name: custom-ca-cert
          mountPath: /usr/local/share/ca-certificates/ca.cert.pem
          subPath: ca.cert.pem
          readOnly: true
      volumes:
        - name: secrets-store-inline
          csi:
            driver: secrets-store.csi.k8s.io
            readOnly: true
            volumeAttributes:
              secretProviderClass: azure-tls-spc-app-07
        - name: custom-ca-cert
          configMap:
            defaultMode: 420
            name: custom-ca-cert
---
apiVersion: v1
kind: Service
metadata:
  name: app-svc
spec:
  type: ClusterIP
  ports:
  - port: 80
    targetPort: 6000
    protocol: TCP
  selector:
    app: app-deploy
