app-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app-ingress
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
spec:
  ingressClassName: nginx-internal # nginx
  tls:
  - hosts:
    - webapi-dns.internal.webapi
    secretName: tls-secret-csi-app-07
  rules:
  - host: webapi-dns.internal.webapi
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: app-svc
            port:
              number: 80
